[package]
name = "hyperfile"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.26"
env_logger = "0.11.6"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
libc = "0.2.170"
chrono = "0.4.39"
bytes = "1.10.0"
aws-config = { version = "1.5.17", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.77.0"
btree-ondisk = "0.10.1"
reactor = { version = "0.1.0", path = "../reactor", optional = true }

[features]
default = ["reactor"]
