[package]
name = "hyperfile"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.26"
env_logger = "0.11.6"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
libc = "0.2.170"
chrono = "0.4.39"
bytes = "1.10.0"
lru = "0.14.0"
aws-config = { version = "1.5.17", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.77.0"
btree-ondisk = { version = "0.13.0", path = "../btree-ondisk", default-features = false }
reactor = { version = "0.1.0", path = "../reactor", optional = true }

[dev-dependencies]
rand = "0.9.0"
md5 = "0.7.0"
crc64fast = "1.1.0"
human_bytes = "0.4.3"

[features]
default = ["reactor", "meta_loader_batch"]
meta_loader_batch = []
reactor = ["dep:reactor", "btree-ondisk/arc", "btree-ondisk/value-check", "btree-ondisk/mt" ]
blocking = ["btree-ondisk/rc"]
